--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,21 @@
-click==6.7
-Flask==0.12.2
-gunicorn==19.7.1
+certifi==2017.7.27.1
+chardet==3.0.4
+click==4.1
+decorator==4.0.2
+Flask==0.10.1
+Flask-SQLAlchemy==2.0
+Flask-WTF==0.12
+geocoder==1.4.1
+gunicorn==19.3.0
+idna==2.6
 itsdangerous==0.24
-Jinja2==2.9.6
-MarkupSafe==1.0
-Werkzeug==0.12.2
+Jinja2==2.8
+MarkupSafe==0.23
+psycopg2==2.7.3.1
+ratelim==0.1.6
+requests==2.7.0
+six==1.9.0
+SQLAlchemy==1.0.8
+urllib3==1.22
+Werkzeug==0.10.4
+WTForms==2.0.2
